homelab/terraform/modules/hosting/templates/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: ${ name }
  namespace: ${ namespace }
  labels:
    app: ${ name }
    service: others

spec:
  selector:
    istio: gateway

  servers:
    - hosts:
        - "*.${ hostname }"
      port:
        name: http
        number: 80
        protocol: HTTP
