homelab/terraform/modules/hosting/templates/gitea-ssh-gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: ${ name }
  namespace: ${ namespace }
  labels:
    app: ${ namespace }
    service: ssh

spec:
  selector:
    istio: gateway
  servers:
    - hosts:
        - "*"
      port:
        name: ssh
        number: 2222
        protocol: TCP
