homelab/terraform/modules/hosting/templates/gitea-ssh-vs.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: ${ name }
  namespace: ${ namespace }
  labels:
    app: ${ service_name }
    service: ssh

spec:
  gateways:
    - ${ gateway }
  hosts:
    - "*"
  tcp:
    - match:
        - port: 2222
      route:
        - destination:
            host: ${ service_name }
            port:
              number: ${ service_port }
